WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
275227
Debug assertions should print the stack trace again
https://bugs.webkit.org/show_bug.cgi?id=275227
Summary
Debug assertions should print the stack trace again
Keith Miller
Reported
2024-06-06 15:04:29 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-06-06 15:05:23 PDT
<
rdar://problem/129365866
>
Keith Miller
Comment 2
2024-06-06 15:07:26 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/29595
EWS
Comment 3
2024-06-06 17:23:55 PDT
Committed
279787@main
(b6db305ef703): <
https://commits.webkit.org/279787@main
> Reviewed commits have been landed. Closing PR #29595 and removing active labels.
Fujii Hironori
Comment 4
2024-06-06 17:50:02 PDT
Regressed :
Bug 275237
– REGRESSION(
279787@main
): Debug assertions shouldn't print the stack trace twice
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug