Debug assertions should print the stack trace again https://bugs.webkit.org/show_bug.cgi?id=275227 rdar://129365866

Reviewed by Yijia Huang.

They used to have backtraces this patch revives that feature.

* Source/WTF/wtf/Assertions.h:

Canonical link: https://commits.webkit.org/279787@main